<resources>
    <!--Barra de acción-->
    <string name="app_name">Oxytank</string>

    <!--Pantalla: registrarComercio_usuario-->
    <string name="tv_registrarComercio_usuario_titulo">Datos del usuario</string>
    <string name="tv_registrarComercio_usuario_nombreUsuario">Nombre de Usuario</string>
    <string name="edt_registrarComercio_usuario_nombreUsuario">Ingresar nombre de usuario</string>
    <string name="tv_registrarComercio_usuario_correo">Correo</string>
    <string name="edt_registrarComercio_usuario_correo">Ingresar correo electronico</string>
    <string name="tv_registrarComercio_usuario_contrasenia">Contraseña</string>
    <string name="edt_registrarComercio_usuario_contrasenia">Ingresar una contraseña</string>
    <string name="tv_registrarComercio_usuario_verificarContrasenia">Verificar Contraseña</string>
    <string name="edt_registrarComercio_usuario_verificarContrasenia">Verificar la contraseña</string>
    <string name="btn_registrarComercio_usuario_ingresarDatosComercio">Continuar</string>

    <!--Pantalla: registrarComercio_comercio-->
    <string name="tv_registrarComercio_comercio_titulo">Datos del comercio</string>
    <string name="tv_registrarComercio_comercio_nombreComercio">Nombre del Comercio</string>
    <string name="edt_registrarComercio_comercio_nombreComercio">Ingresar nombre de comercio</string>
    <string name="tv_registrarComercio_comercio_telefono">Telefono</string>
    <string name="edt_registrarComercio_comercio_telefono">Ingresar número telefonico</string>
    <string name="tv_registrarComercio_comercio_servicio">Servicios que proporciona el negocio</string>
    <string name="ckbx_registrarComercio_comercio_servicio_Renta">Renta</string>
    <string name="ckbx_registrarComercio_comercio_servicio_Venta">Venta</string>
    <string name="ckbx_registrarComercio_comercio_servicio_Refil">Refil</string>
    <string name="btn_registrarComercio_comercio_guardarUbicacion">Continuar</string>
    <string name="title_activity_registrar_comercio_ubicacion">Map</string>
    <string name="title_activity_maps">Map</string>

    <!--Pantalla: registrarComercio_ubicación-->
    <string name="tv_registrarComercio_ubicacion_titulo">Agregar Dirección</string>
    <string name="edt_registrarComercio_ubicacion_solicitarDireccion">Ingresa la ubicación del comercio</string>
    <string name="btn_registrarComercio_ubicacion_buscarDireccion">Buscar</string>
    <string name="btn_registrarComercio_ubicacion_guardarDireccion">Guardar</string>

    <!--Pantalla: registrarComercio_comprobarDatos-->
    <string name="tv_registrarComercio_comprobarDatos_titulo">Verficar los datos ingresados</string>
    <string name="tv_registrarComercio_comprobarDatos_usuarioMensaje">Nombre de Usuario:</string>
    <string name="tv_registrarComercio_comprobarDatos_correoMensaje">Correo:</string>
    <string name="tv_registrarComercio_comprobarDatos_contraseniaMensaje">Contraseña:</string>
    <string name="tv_registrarComercio_comprobarDatos_tipoMensaje">Tipo de cuenta:</string>
    <string name="tv_registrarComercio_comprobarDatos_comercioMensaje">Nombre del comercio:</string>
    <string name="tv_registrarComercio_comprobarDatos_telefonoMensaje">Telefono:</string>
    <string name="tv_registrarComercio_comprobarDatos_serviciosMensaje">Servicios:</string>
    <string name="tv_registrarComercio_comprobarDatos_direccionMensaje">Dirección</string>
    <string name="btn_registrarComercio_comprobarDatos_finalizarRegistro">Finalizar</string>
    <string name="tv_registrarComercio_comprobarDatos_registroIncorrecto">Registro incorrecto</string>

    <!--Pantalla: cuentaTipoComercio_PantallaPrincipal-->
    <string name="tv_cuentaTipoComercio_PantallaPrincipal_titulo">Actualizar disponibilidad</string>
    <string name="tv_cuentaTipoComercio_PantallaPrincipal_venta">Venta</string>
    <string name="tv_cuentaTipoComercio_PantallaPrincipal_renta">Renta</string>
    <string name="tv_cuentaTipoComercio_PantallaPrincipal_refil">Refil</string>
    <string name="rb_cuentaTipoComercio_PantallaPrincipal_venta_Disponible">Disponible</string>
    <string name="rb_cuentaTipoComercio_PantallaPrincipal_venta_NoDisponible">No Disponinble</string>
    <string name="rb_cuentaTipoComercio_PantallaPrincipal_venta_SinServicio">Sin Servicio</string>
    <string name="rb_cuentaTipoComercio_PantallaPrincipal_renta_Disponible">Disponible</string>
    <string name="rb_cuentaTipoComercio_PantallaPrincipal_renta_NoDisponible">No Disponinble</string>
    <string name="rb_cuentaTipoComercio_PantallaPrincipal_renta_SinServicio">Sin Servicio</string>
    <string name="rb_cuentaTipoComercio_PantallaPrincipal_refil_Disponible">Disponible</string>
    <string name="rb_cuentaTipoComercio_PantallaPrincipal_refil_NoDisponible">No Disponinble</string>
    <string name="rb_cuentaTipoComercio_PantallaPrincipal_refil_SinServicio">Sin Servicio</string>
    <string name="btn_cuentaTipoComercio_PantallaPrincipal_Actualizar">Actualizar</string>

    <!--Activity Main-->
    <string name="tv_activityMain_tituloAplicacion">Oxytank</string>
    <string name="tv_activityMain_tituloInicioSesion">Iniciar Sesion</string>
    <string name="edt_activityMain_nombreUsuario">Ingresar nombre de usuario</string>
    <string name="edt_activityMain_contrasenia">Ingresar contraseña</string>
    <string name="btn_activityMain_iniciarSesion">Iniciar Sesion</string>
    <string name="btn_activityMain_registrarme">Registrarme</string>

    <!--Seleccionar Registro-->
    <string name="tv_seleccionarRegistro_titulo">Selecciona un tipo de cuenta</string>
    <string name="btn_seleccionarRegistro_cliente">Cliente</string>
    <string name="btn_seleccionarRegistro_comercio">Comercio</string>
    <string name="btn_seleccionarRegistro_regresar">Regresar</string>

    <!--Pantalla: registrarCliente-->
    <string name="tv_registrarCliente_titulo">Datos del usuario</string>
    <string name="tv_registrarCliente_nombreUsuario">Nombre de Usuario</string>
    <string name="edt_registrarCliente_nombreUsuario">Ingresar nombre de usuario</string>
    <string name="tv_registrarCliente_correo">Correo</string>
    <string name="edt_registrarCliente_correo">Ingresar correo electronico</string>
    <string name="tv_registrarCliente_contrasenia">Contraseña</string>
    <string name="edt_registrarCliente_contrasenia">Ingresar una contraseña</string>
    <string name="tv_registrarCliente_verificarContrasenia">Verificar Contraseña</string>
    <string name="edt_registrarCliente_verificarContrasenia">Verificar la contraseña</string>
    <string name="btn_registrarCliente_comprobarDatos_cuentaCliente">Continuar</string>

    <!--Pantalla: registrarCliente_comprobarDatos-->
    <string name="tv_registrarCliente_comprobarDatos_titulo">Verficar los datos ingresados</string>
    <string name="tv_registrarCliente_comprobarDatos_usuarioMensaje">Nombre de Usuario:</string>
    <string name="tv_registrarCliente_comprobarDatos_correoMensaje">Correo:</string>
    <string name="tv_registrarCliente_comprobarDatos_contraseniaMensaje">Contraseña:</string>
    <string name="tv_registrarCliente_comprobarDatos_tipoMensaje">Tipo de cuenta:</string>
    <string name="btn_registrarCliente_comprobarDatos_finalizarRegistro">Finalizar</string>
    <string name="tv_registrarCliente_comprobarDatos_registroIncorrecto">Registro incorrecto</string>

    <!--Pantalla: cuentaTipoCliente_PantallaPrincipal-->
    <string name="tv_cuentaTipoCliente_PantallaPrincipal_titulo">Selecciona un comercio</string>
    <string name="edt_cuentaTipoCliente_PantallaPrincipal_solicitarNombre">Ingresa el nombre de un comercio</string>
    <string name="imgbtn_cuentaTipoCliente_PantallaPrincipal_buscarComercio">Buscar</string>

    <!--Pantalla: Diseño del listView con la lista de comercios.-->
    <string name="tv_listItems_listaComercios_nombre">Sin comercio</string>
    <string name="tv_listItems_listaComercios_servicioVenta">Sin servicio</string>
    <string name="tv_listItems_listaComercios_servicioRefil">Sin servicio</string>
    <string name="tv_listItems_listaComercios_servicioRenta">Sin servicio</string>

    <!--Pantalla: cuentaTipoCliente_mostrarComercio-->
    <string name="tv_cuentaTipoCliente_mostrarComercio_telefonoMensaje">Telefono:</string>
    <string name="tv_cuentaTipoCliente_mostrarComercio_serviciosMensaje">Servicios:</string>
    <string name="tv_cuentaTipoCliente_mostrarComercio_direccionMensaje">Dirección</string>
    <string name="tv_cuentaTipoCliente_mostrarComercio_valoracionMensaje">Valoración</string>
    <string name="btn_cuentaTipoCliente_mostrarComercio_verDireccion">Ver lugar</string>
    <string name="btn_cuentaTipoCliente_mostrarComercio_valorar">Valorar</string>
    <string name="btn_cuentaTipoCliente_mostrarComercio_regresarPantallaPrincipal">Regresar</string>
    <string name="btn_cuentaTipoCliente_mostrarComercio_registroIncorrecto">Registro incorrecto</string>
    <string name="title_activity_cuenta_tipo_cliente_ver_direccion">Map</string>

    <!--Pantalla: cuentaTipoCLiente_modificarInformacion-->
    <string name="tv_cuentaTipoCliente_modificarInformacion_titulo">Actualizar informacion</string>
    <string name="tv_cuentaTipoCliente_modificarInformacion_nombreMensaje">Nombre de Usuario</string>
    <string name="tv_cuentaTipoCliente_modificarInformacion_correoMensaje">Correo</string>
    <string name="tv_cuentaTipoCliente_modificarInformacion_contraseniaMensaje">Contraseña</string>
    <string name="tv_cuentaTipoCliente_modificarInformacion_verificarContraseniaMensaje">Verificar Contraseña</string>
    <string name="btn_cuentaTipoCliente_modificarInformacion_actualizarInformacion">Actualizar</string>
    <string name="edt_cuentaTipoCliente_modificarInformacion_error">Error</string>

    <!--Pantalla: cuentaTipoComercio_modificarInformacion-->
    <string name="tv_cuentaTipoComercio_modificarInformacion_titulo">Actualizar informacion</string>
    <string name="tv_cuentaTipoComercio_modificarInformacion_nombreComercioMensaje">Nombre del Comercio</string>
    <string name="tv_cuentaTipoComercio_modificarInformacion_telefonoMensaje">Telefono</string>
    <string name="tv_cuentaTipoComercio_modificarInformacion_nombreMensaje">Nombre de Usuario</string>
    <string name="tv_cuentaTipoComercio_modificarInformacion_correoMensaje">Correo</string>
    <string name="tv_cuentaTipoComercio_modificarInformacion_contraseniaMensaje">Contraseña</string>
    <string name="tv_cuentaTipoComercio_modificarInformacion_verificarContraseniaMensaje">Verificar Contraseña</string>
    <string name="btn_cuentaTipoComercio_modificarInformacion_actualizarInformacion">Actualizar</string>
    <string name="edt_cuentaTipoComercio_modificarInformacion_error">Error</string>

    <!--Cuenta de tipo cliente: Menu Overflow.-->
    <string name="cuentaTipoCliente_overflow_item_modificarDatos">Modificar informacion</string>
    <string name="cuentaTipoCliente_oveflow_item_cerrarSesion">Cerrar Sesion</string>

    <!--Cuenta de tipo comercio: Menu Overflow.-->
    <string name="cuentaTipoComercio_overflow_item_modificarDatos">Modificar informacion</string>
    <string name="cuentaTipoComercio_oveflow_item_cerrarSesion">Cerrar Sesion</string>

</resources>