<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seleccionarRegistro">

    <!--Título: Selecciona un tipo de cuenta.-->
    <TextView
        android:id="@+id/tv_seleccionarRegistro_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="150dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tv_seleccionarRegistro_titulo"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tv_seleccionarRegistro_titulo" />

    <!--Button: Intent (Registro de cliente)-->
    <Button
        android:id="@+id/btn_seleccionarRegistro_cliente"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/btn_seleccionarRegistro_cliente"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_seleccionarRegistro_titulo" />

    <!--Button: Intent (Registro de comercio)-->
    <Button
        android:id="@+id/btn_seleccionarRegistro_comercio"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="registrarComercio_usuario"
        android:text="@string/btn_seleccionarRegistro_comercio"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_seleccionarRegistro_cliente" />

    <!--Button: Intent (Regresar a la inicio de sesion)-->
    <Button
        android:id="@+id/btn_seleccionarRegistro_regresar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/btn_seleccionarRegistro_regresar"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_seleccionarRegistro_comercio" />

</androidx.constraintlayout.widget.ConstraintLayout>