<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrarCliente_comprobarDatos">

    <!--ScrollBar-->
    <ScrollView
        android:layout_width="390dp"
        android:layout_height="720dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--LinearLayout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Contenido: Título-->
            <androidx.cardview.widget.CardView
                android:layout_width="390dp"
                android:layout_height="100dp">

                <!--Título-->
                <TextView
                    android:id="@+id/tv_registrarCliente_comprobarDatos_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/tv_registrarCliente_comprobarDatos_titulo"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:typeface="serif" />

            </androidx.cardview.widget.CardView>

            <!--TextView: Mostrar nombre del usuario.-->
            <androidx.cardview.widget.CardView
                android:layout_width="390dp"
                android:layout_height="150dp">

                <!--TextView: Mensaje Usuario-->
                <TextView
                    android:id="@+id/tv_registrarCliente_comprobarDatos_usuarioMensaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/tv_registrarCliente_comprobarDatos_usuarioMensaje"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:typeface="serif" />

                <!--TextView: Usuario-->
                <TextView
                    android:id="@+id/tv_registrarCliente_comprobarDatos_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="80dp"
                    android:autofillHints="@string/edt_registrarCliente_nombreUsuario"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/tv_registrarCliente_comprobarDatos_registroIncorrecto"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:typeface="serif" />
            </androidx.cardview.widget.CardView>

            <!--Contenido: Mostrar correo-->
            <androidx.cardview.widget.CardView
                android:layout_width="390dp"
                android:layout_height="150dp">

                <!--TextView: Mensaje Correo-->
                <TextView
                    android:id="@+id/tv_registrarCliente_comprobarDatos_correoMensaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/tv_registrarCliente_comprobarDatos_correoMensaje"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:typeface="serif" />

                <!--TextView: Correo-->
                <TextView
                    android:id="@+id/tv_registrarCliente_comprobarDatos_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="80dp"
                    android:autofillHints="@string/edt_registrarCliente_correo"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/tv_registrarCliente_comprobarDatos_registroIncorrecto"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:typeface="serif" />

            </androidx.cardview.widget.CardView>

            <!--Contenido: Mostrar contraseña-->
            <androidx.cardview.widget.CardView
                android:layout_width="390dp"
                android:layout_height="150dp">

                <!--TextView: Mensaje Contraseña-->
                <TextView
                    android:id="@+id/tv_registrarCliente_comprobarDatos_contraseniaMensaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/tv_registrarCliente_comprobarDatos_contraseniaMensaje"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:typeface="serif" />

                <!--TextView: Contraseña-->
                <TextView
                    android:id="@+id/tv_registrarCliente_comprobarDatos_contrasenia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="80dp"
                    android:autofillHints="@string/edt_registrarCliente_contrasenia"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/tv_registrarCliente_comprobarDatos_registroIncorrecto"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:typeface="serif" />
            </androidx.cardview.widget.CardView>

            <!--Contenido: Mostrar tipo de usuario-->
            <androidx.cardview.widget.CardView
                android:layout_width="390dp"
                android:layout_height="150dp">

                <!--TextView: Mensaje tipo-->
                <TextView
                    android:id="@+id/tv_registrarCliente_comprobarDatos_tipoMensaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/tv_registrarCliente_comprobarDatos_tipoMensaje"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:typeface="serif" />

                <!--TextView: Tipo-->
                <TextView
                    android:id="@+id/tv_registrarCliente_comprobarDatos_tipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="80dp"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/tv_registrarCliente_comprobarDatos_registroIncorrecto"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:typeface="serif" />
            </androidx.cardview.widget.CardView>

            <!--Contenido: Pasar a la actividad "cuentaTipoCliente_PantallaPrincipal-->
            <androidx.cardview.widget.CardView
                android:layout_width="390dp"
                android:layout_height="100dp">

                <!--Button: Intent (Pantalla principal de la cuenta de tipo cliente)-->
                <Button
                    android:id="@+id/btn_registrarCliente_comprobarDatos_finalizarRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:onClick="cuentaTipoCliente_PantallaPrincipal"
                    android:text="@string/btn_registrarCliente_comprobarDatos_finalizarRegistro"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:typeface="serif" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>